--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -150,9 +150,9 @@ iptables_output_raw_rules: []
 iptables_zones_raw_rules: []
 
 # Indicate if some of the previous variables must be loaded also from host
-# variables. Any host variable that begins with "iptables_<variable>_*" and contains
-# the necessary attributes will be loaded as an item to manage by the role. The
-# variables must follow the structure detailed before for each one.
+# variables. Any host variable that begins with "iptables_<variable>_*" and
+# contains the necessary attributes will be loaded as an item to manage by the
+# role. The variables must follow the structure detailed before for each one.
 
 iptables_load_from_hostvars: yes
 
