--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,11 +3,12 @@
 
 galaxy_info:
   role_name: iptables
+  namespace: amtega
   author: José Enrique Mourón Regueira / Juan Antonio Valiño García
   description: Setup an iptables based firewall segmented by zones
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.9
+  min_ansible_version: 2.10
   platforms:
     - name: EL
       versions:
@@ -15,8 +16,8 @@ galaxy_info:
         - 7
     - name: Fedora
       versions:
-        - 29
-        - 30
+        - 34
+        - 35
   galaxy_tags:
     - network
     - iptables
@@ -28,7 +29,7 @@ dependencies:
     vars:
       check_platform_distributions:
         centos: 6
-        fedora: 27
+        fedora: 34
         redhat: 6
 
   - role: amtega.packages
