--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,5 +5,29 @@
   gather_facts: no
   become: yes
   tasks:
+    - name: Disable repos mirror list
+      replace:
+        path: "/etc/yum.repos.d/{{ repo_file }}"
+        regexp: "(^mirrorlist=.*)"
+        replace: "#\\1"
+      loop: "{{ repo_files }}"
+      loop_control:
+        loop_var: repo_file
+
+    - name: Point repos to vault
+      replace:
+        path: "/etc/yum.repos.d/{{ repo_file }}"
+        regexp: "#baseurl=http://mirror.centos.org/"
+        replace: "baseurl=http://vault.centos.org/"
+      loop: "{{ repo_files }}"
+      loop_control:
+        loop_var: repo_file
+
     - name: Setup python for ansible
       raw: yum install -y libselinux-python
+      when: yes
+  vars:
+    repo_files:
+      - CentOS-Base.repo
+      - CentOS-Debuginfo.repo
+      - CentOS-fasttrack.repo
